# columnresizer

./: CMakeLists.txt  README.markdown  README.md  columnresizer.h  demowidget.ui  main.cpp  main.h  qtsizegroup.cpp  qtsizegroup.h  widgetresizer.cpp  widgetresizer.h
demo/: columnresizerdemo.cpp  columnresizerdemo.h  demowidget.ui  main.cpp
src/: columnresizer.cpp  columnresizer.h
